<resources>
    <string name="app_name">Saviour Trust Forms App</string>
    <string name="action_settings">Settings</string>
    <string name="homepage_label">Welcome to The Saviour Trust App</string>
    <string name="weekly_form_label">Weekly Form</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weekly_recurring_form">Weekly Recurring Form</string>
    <string name="initial_assessment">Initial Assessment</string>
    <string name="property_form">Property Form</string>
    <string name="service_user_form">Service User Form</string>
    <string name="current_housing_situation">Current Housing Situation:</string>
    <string name="details">Details:</string>
    <string name="rent_arrears">Rent Arrears?</string>
    <string name="injunction_orders">Injunction orders?</string>
    <string name="area_of_concern">Area of concern?</string>
    <string name="address">Address</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="reason_for_leaving">Reason for leaving</string>
    <string name="notes_on_toaster">Notes on toaster</string>
    <string name="notes_on_fryer">Notes on fryer</string>
    <string name="notes_on_hoover">Notes on hoover</string>
    <string name="notes_on_kettle">Notes on kettle</string>
    <string name="notes_on_microwave">Notes on microwave</string>
    <string name="notes_on_washer">Notes on washer</string>
    <string name="notes_on_fridge_freezer">Notes on fridge / freezer</string>
    <string name="fault_s_and_location_s">Fault(s) and location(s)</string>
    <string name="problems_with_carbon_monoxide_alarm_s">Problems with carbon monoxide alarm(s)</string>
    <string name="problems_with_smoke_alarm_s">Problems with smoke alarm(s)</string>
    <string name="fire_door">Fire door</string>
    <string name="room_two">Room Two</string>
    <string name="room_one">Room One</string>
    <string name="poor">Poor</string>
    <string name="ok">OK</string>
    <string name="good">Good</string>
    <string name="toilet_check">Toilet Check</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="living_room">Living Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="hall_inc_cubby_hole">Hall inc. Cubby Hole</string>
    <string name="names_of_those_present">Names of those present</string>
    <string name="present">Present</string>
    <string name="address_example">e.g. 10 Downing Street</string>
    <string name="time_example">e.g. 13:38</string>
    <string name="time">Time</string>
    <string name="date_example">e.g. 13/01/2021</string>
    <string name="date">Date</string>
    <string name="name_example">e.g. John Doe</string>
    <string name="name">Name</string>
    <string name="postcode">Postcode</string>
    <string name="postcode_example">e.g. NG15 7HL</string>
    <string name="owner">Owner Details</string>
    <string name="phone">Phone</string>
    <string name="rent_paid">Rent Paid</string>
    <string name="room_rate">Room Rate</string>
    <string name="spare_room">Spare Room</string>
    <string name="sr_void">Sr Void</string>
    <string name="date_property">Date Property</string>
    <string name="rooms">Rooms</string>
    <string name="voids">Voids</string>
    <string name="gas_cert_expiry">Gas Cert Expiry</string>
    <string name="elec_cert_expiry">Elec Cert Expiry</string>
    <string name="gas_serial_number">Gas Serial Number</string>
    <string name="elec_serial_number">Elec Serial Number</string>
    <string name="gas_provider">Gas Provider</string>
    <string name="electric_provider">Electric Provider</string>
    <string name="gas_meter">Gas Meter</string>
    <string name="elec_meter">Elec Meter</string>
    <string name="save">Save</string>
    <string name="room_one_details">Room one details</string>
    <string name="room_two_details">Room two details</string>
    <string name="electricity_info">Electricity Info</string>
    <string name="gas_info">Gas Info</string>
    <string name="phone_example">e.g. 01234 567890</string>
    <string name="amount_paid_example">e.g. £1,820</string>
    <string name="room_rate_example">e.g. £250 ppm</string>
    <string name="number_of_voids">Number of Voids</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="property_address_amp_postcode"><![CDATA[Property Address & Postcode]]></string>
    <string name="submit_form">Submit Form</string>
    <string name="next_page"><![CDATA[Next Page >]]></string>
    <string name="dob_example" />
    <string name="ra">RA</string>
    <string name="previous_page"><![CDATA[< Previous Page]]></string>
    <string name="backhome"><![CDATA[< Back Home]]></string>
    <string name="serviceUserFormLabel">Service User Form</string>
    <string name="initialAssessmentLabel">Initial Assessment</string>
    <string name="initialAssessment2Label">Initial Assessment Page 2</string>
    <string name="initialAssessment3Label">Initial Assessment Page 3</string>
    <string name="initialAssessment4Label">Initial Assessment Page 4</string>
    <string name="initialAssessment5Label">Initial Assessment Page 5</string>
    <string name="initialAssessment6Label">Initial Assessment Page 6</string>
    <string name="initialAssessment7Label">Initial Assessment Page 7</string>
</resources>