<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:windowSoftInputMode="adjustPan"
    >

    <LinearLayout
        android:id="@+id/menu_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/e_g_john_doe"
            android:autofillHints="AUTOFILL_HINT_NAME" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/e_g_13_01_2021"
            android:autofillHints="AUTOFILL_HINT_DATE" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/e_g_13_38"
            android:autofillHints="AUTOFILL_HINT_TIME" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/e_g_10_downing_street"
            android:autofillHints="AUTOFILL_HINT_ADDRESS" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/present" />

        <EditText
            android:id="@+id/editTextPresent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/names_of_those_present"
            android:autofillHints="AUTOFILL_HINT_NAME" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hall_inc_cubby_hole" />

        <EditText
            android:id="@+id/editTextHall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:hint="@string/hall_inc_cubby_hole"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kitchen" />

        <EditText
            android:id="@+id/editTextKitchen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:hint="@string/kitchen"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/living_room" />

        <EditText
            android:id="@+id/editTextLivingRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:hint="@string/living_room"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bathrooms" />

        <EditText
            android:id="@+id/editTextBathroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:hint="@string/bathrooms"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toilet_check" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poor" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_one" />

        <EditText
            android:id="@+id/editTextRoomOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_two" />

        <EditText
            android:id="@+id/editTextRoomTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fire_door" />

        <EditText
            android:id="@+id/editTextFireDoor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textLongMessage"
            android:importantForAutofill="no"
            android:hint="@string/fire_door" />

        <CheckBox
            android:id="@+id/checkBoxSmokeAlarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problems_with_smoke_alarm_s" />

        <EditText
            android:id="@+id/editTextSmokeAlarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fault_s_and_location_s"
            android:importantForAutofill="no"
            android:inputType="textLongMessage"
            android:visibility="gone" />

        <CheckBox
            android:id="@+id/checkBoxCarbonMonoxideAlarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/problems_with_carbon_monoxide_alarm_s" />

        <EditText
            android:id="@+id/editTextCarbonMonoxideAlarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fault_s_and_location_s"
            android:importantForAutofill="no"
            android:inputType="textLongMessage"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextFridgeFreezer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notes_on_fridge_freezer"
            android:importantForAutofill="no"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/editTextWasher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notes_on_washer"
            android:importantForAutofill="no"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/editTextMicrowave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notes_on_microwave"
            android:importantForAutofill="no"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/editTextKettle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notes_on_kettle"
            android:importantForAutofill="no"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/editTextHoover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notes_on_hoover"
            android:importantForAutofill="no"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/editTextFryer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notes_on_fryer"
            android:importantForAutofill="no"
            android:inputType="textLongMessage" />

        <EditText
            android:id="@+id/editTextToaster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/notes_on_toaster"
            android:importantForAutofill="no"
            android:inputType="textLongMessage" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/submit_form" />

    </LinearLayout>

</ScrollView>