<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:windowSoftInputMode="adjustPan"
    >

    <LinearLayout
        android:id="@+id/menu_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/CHSLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_housing_situation"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/CHSDetailsField"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/details"
            android:inputType="textMultiLine"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/CHSRentCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rent_arrears" />

        <EditText
            android:id="@+id/CHSRentField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/details"
            android:inputType="textMultiLine"
            android:visibility="gone"
            tools:visibility="visible"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/CHSInjunctionCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/injunction_orders" />

        <EditText
            android:id="@+id/CHSInjunctionField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/details"
            android:inputType="textMultiLine"
            android:visibility="gone"
            tools:visibility="visible"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/CHSConcernCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/area_of_concern" />

        <EditText
            android:id="@+id/CHSConcernField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/details"
            android:inputType="textMultiLine"
            android:visibility="gone"
            tools:visibility="visible"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/AddressHeadingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/FromHeadingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ToHeadingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/RFLHeadingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reason_for_leaving" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/submit_form" />

            <Button
                android:id="@+id/btnNextPage"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/next_page" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>